--- a/SeaStrikeClient/LayoutEditor.xaml
+++ b/SeaStrikeClient/LayoutEditor.xaml
@@ -1,12 +1,122 @@
 ﻿<Window x:Class="SeaStrikeClient.LayoutEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SeaStrikeClient"
-        mc:Ignorable="d"
-        Title="LayoutEditor" Height="450" Width="800">
+        Title="Hajó Elhelyezés" Height="550" Width="500">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <!-- 10x10 grid -->
+            <RowDefinition Height="Auto"/>
+            <!-- Finish button -->
+        </Grid.RowDefinitions>
+
+        <!-- 10x10 hajó elhelyezési terület -->
+        <UniformGrid Rows="10" Columns="10" Background="LightBlue" Grid.Row="0">
+            <!-- 100 gomb, automatikusan generálva -->
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <Button Background="White" BorderBrush="Black" BorderThickness="1" Click="Button_Click" />
+            <!-- ... folytatás, összesen 100 gomb ... -->
+        </UniformGrid>
+
+        <!-- Befejezés gomb -->
+        <Button Content="Befejezés" Grid.Row="1" Margin="10" Padding="10" Click="FinishButton_Click"/>
     </Grid>
 </Window>
